# qule

./: .gitignore  LICENSE.md  README.md
data/: toronto_ventura_grover_X.txt  toronto_ventura_grover_Y.txt  toronto_ventura_qft_exactly_constrained_U0.txt  toronto_ventura_qft_exactly_constrained_X.txt  toronto_ventura_qft_exactly_constrained_Y.txt  toronto_ventura_underconstrained_X.txt  toronto_ventura_underconstrained_Y.txt  ventura_2000_U0.txt  ventura_2000_X.txt  ventura_2000_Y.txt
src/: .gitignore  CMakeLists.txt  Globals.h  debug.txt  gendata.cpp  main.cpp  noise_test.sh  run_tests.py  run_tests.sh
src/Decomposition/: openQLs.py  qiskit_decomposition.py  report.md  sk_example  solovayKitaev.py  squander.py
src/Decomposition/output/: example.qasm  example_scheduled.qasm
src/Functions/: CMakeLists.txt  Function.h  Noise.cpp  Noise.h  OrthogonalProcrustes.cpp  OrthogonalProcrustes.h  Orthogonalization.cpp  Orthogonalization.h
src/LearningAlgorithms/: CMakeLists.txt  DeltaLearningPenalty.cpp  DeltaLearningPenalty.h  GradientDescentLagrange.cpp  GradientDescentLagrange.h  GradientDescentPenalty.cpp  GradientDescentPenalty.h  LearningAlgorithm.h  NewtonsMethod.cpp  NewtonsMethod.h
src/LearningRates/: Adam.cpp  Adam.h  CMakeLists.txt  Constant.cpp  Constant.h  LearningRate.h  Wolfe.cpp  Wolfe.h
src/cmake/Modules/: FindMKL.cmake
